adapter: fix distance when getting prev pts/dts at offset

https://bugzilla.gnome.org/show_bug.cgi?id=765662